Bug 103069 - [Qt] REGRESSION(r135507): It made 13 tests fail
Summary: [Qt] REGRESSION(r135507): It made 13 tests fail
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 420+
Hardware: All All
: P2 Normal
Assignee: Allan Sandfeld Jensen
URL:
Keywords: Qt, QtTriaged
Depends on:
Blocks: 79666 102667
  Show dependency treegraph
 
Reported: 2012-11-22 07:51 PST by Csaba Osztrogonác
Modified: 2012-11-23 03:28 PST (History)
3 users (show)

See Also:


Attachments
Patch (3.13 KB, patch)
2012-11-22 08:17 PST, Allan Sandfeld Jensen
no flags Details | Formatted Diff | Diff
Patch (3.40 KB, patch)
2012-11-23 03:19 PST, Allan Sandfeld Jensen
hausmann: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Csaba Osztrogonác 2012-11-22 07:51:11 PST
http://build.webkit.sed.hu/results/x86-64%20Linux%20Qt%20Release/r135508%20%2845331%29/results.html

fast/preloader/script.html
http/tests/navigation/reload-subframe-object.html
mhtml/check_domain.mht
mhtml/multi_frames_binary.mht
mhtml/multi_frames_ie.mht
mhtml/multi_frames_unmht.mht
mhtml/page_with_css_and_js_ie.mht
mhtml/page_with_css_and_js_unmht.mht
mhtml/page_with_image_ie.mht
mhtml/page_with_image_unmht.mht
mhtml/shared_buffer_bug.mht
mhtml/simple_page_ie.mht
mhtml/simple_page_unmht.mht
Comment 1 Allan Sandfeld Jensen 2012-11-22 08:17:16 PST
Created attachment 175681 [details]
Patch
Comment 2 Csaba Osztrogonác 2012-11-22 08:27:14 PST
I skipped them to paint the bots green - r135526. Please unskip them with the fix.
Comment 3 Allan Sandfeld Jensen 2012-11-23 02:09:50 PST
The issue with http/tests/navigation/reload-subframe-object.html is more complicated that the rest, though also more important to fix. It will require similar api changes as those I introduce to fix bug #103056, so I will fix it with the same or a related patch.
Comment 4 Allan Sandfeld Jensen 2012-11-23 02:31:25 PST
Committed r135577: <http://trac.webkit.org/changeset/135577>
Comment 5 Csaba Osztrogonác 2012-11-23 02:34:29 PST
Reopen, because http/tests/navigation/reload-subframe-object.html is still skipped.
Comment 6 Allan Sandfeld Jensen 2012-11-23 03:19:21 PST
Created attachment 175767 [details]
Patch
Comment 7 Allan Sandfeld Jensen 2012-11-23 03:20:56 PST
Since we do not call getMIMETypeForExtension from getMIMETypeForPath, it turned out I could fix this without changing the general API.
Comment 8 Allan Sandfeld Jensen 2012-11-23 03:28:27 PST
Committed r135584: <http://trac.webkit.org/changeset/135584>