[Qt] REGRESSION(r135507): It made 13 tests fail https://bugs.webkit.org/show_bug.cgi?id=103069

Reviewed by Simon Hausmann.

Source/WebCore:

Fix regression in recognizing MHTML on some platforms.

* platform/qt/MIMETypeRegistryQt.cpp:
(ExtensionMap):
(WebCore::MIMETypeRegistry::getMIMETypeForExtension):
(WebCore::MIMETypeRegistry::getMIMETypeForPath):

LayoutTests:

Unskip fixed test and update one benign change.

* platform/qt/TestExpectations:
* platform/qt/fast/preloader/script-expected.txt: Added.

Canonical link: https://commits.webkit.org/121238@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135577 268f45cc-cd09-0410-ab3c-d52691b4dbfc